--- a/bg.css
+++ b/bg.css
@@ -16,15 +16,24 @@ body {
   }
   
   .bg{
-    z-index: -1;
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    /* flex-direction: column; */
+    z-index: -10;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    filter: opacity(0.7);
-    .bg img{
-      width: 100%;
-      /* display: flex; */
-      /* flex-wrap: wrap; */
-    }
+    filter: opacity(0.5);
+    width: 100%;
+    /* min-height: 100vh; */
+  }
+  .bg img{
+    width: 100%;
+    min-height: 100vh;
+    filter: brightness(70%);
+    object-fit: cover;
+  }
+  #qoqon{
+    fill: darkblue;
   }
