--- a/food.css
+++ b/food.css
@@ -1,15 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Pacifico&display=swap');
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
       monospace;
   }
-.container{
-    width: 100%;
+  .food-sections h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    padding: 30px;
-}
+    font-weight: 400;
+    font-size: 65px;
+    /* font-family: 'Alex+Brush'; */
+    font-family: 'Pacifico';
+  }
   
   .food-nft{
     user-select:none;
@@ -38,12 +40,12 @@ code {
       flex-direction: column;
       width: 90%;
       padding: 1rem;
-      .food-tokenImage{
+      /* .food-tokenImage{
         border-radius: .5rem;
         max-width: 100%;
         height: 250px;
         object-fit: cover;
-      }
+      } */
       .food-description{
         margin: .5rem 0;
         color: #ffffff;
@@ -125,7 +127,10 @@ code {
     }
   }
   .food-tokenImage{
-    width: 300px;
+    max-width: 100%;
+    height: 250px;
+    border-radius: .5rem;
+    object-fit: cover;
   }
   .food-main h2{
     color: #fff;
