--- a/style.css
+++ b/style.css
@@ -335,6 +335,11 @@ body {
 }
 
 .news-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.news-container-items {
   position: relative;
   width: 100%;
   display: flex;
@@ -386,6 +391,56 @@ body {
   text-align: center;
   color: #f5f5f5;
   font-weight: 700;
+}
+.news-container-button {
+  font-size: 17px;
+  padding: 0.8em 2.7em;
+  font-weight: 500;
+  background: #bebebe;
+  color: rgb(255, 255, 255);
+  border: none;
+  position: relative;
+  overflow: hidden;
+  border-radius: 0.6em;
+  cursor: pointer;
+}
+
+.gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 0.6em;
+  margin-top: -0.25em;
+  background: rgba(133, 92, 2, 0.123);
+}
+
+.label {
+  position: relative;
+  top: -1px;
+}
+
+.transition {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  transition-duration: 500ms;
+  background-color: rgb(133, 92, 2);
+  border-radius: 9999px;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.news-container-button:hover .transition {
+  width: 14em;
+  height: 14em;
+}
+
+.news-container-button:active {
+  transform: scale(0.97);
 }
 
 .item img {
@@ -1005,8 +1060,7 @@ swiper-slide img {
   .news {
     padding-top: 100px;
   }
-
-  .news-container {
+  .news-container-items {
     justify-content: center;
   }
 
