--- a/style.css
+++ b/style.css
@@ -67,12 +67,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(123, 84, 0, 0.68);
+  background-color: rgb(21, 121, 155);
   border-radius: 50px;
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgb(21, 121, 155);
   background-color: #f5f5f5;
 }
 
@@ -96,7 +96,7 @@ body {
   color: #fff;
   background-color: #8b8b8b;
   z-index: 1000;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: rgbargb(21, 121, 155) 0px 8px 24px;
   cursor: pointer;
   transition: 0.2s ease;
 }
@@ -134,9 +134,9 @@ body {
   z-index: 100;
   background: linear-gradient(
     0deg,
-    rgba(238, 152, 40, 0) 0%,
-    rgba(121, 76, 9, 0.03) 0%,
-    rgba(123, 84, 0, 0.68) 98%
+    rgba(40, 132, 238, 0) 0%,
+    rgba(15, 138, 175, 0.03) 0%,
+    rgb(47, 149, 184) 98%
   );
   backdrop-filter: blur(1px);
 }
@@ -185,7 +185,7 @@ body {
 
 .navbar a:hover,
 .navbar a.active {
-  color: rgb(133, 92, 2);
+  color: rgb(11, 68, 87);
 }
 
 .home,
@@ -213,7 +213,7 @@ body {
   font-size: 35px;
   font-weight: 700;
   line-height: 1.2;
-  color: aliceblue;
+  color: rgb(21, 121, 155);
 }
 
 .home-content h3::before {
@@ -253,6 +253,7 @@ body {
 .welcome-section-textBx {
   width: 550px;
   margin: 20px 0px;
+  color: rgb(21, 121, 155);
 }
 
 .welcome-section-textBx h1 {
@@ -270,7 +271,8 @@ body {
   margin-top: 15px;
   border-radius: 3px;
   border: none;
-  color: rgba(133, 92, 2, 0.836);
+  color: rgb(21, 121, 155);
+  box-shadow: 0 0 25px 0 rgb(21, 121, 155);
   font-weight: 700;
   cursor: pointer;
   transition: 0.2s ease;
@@ -279,7 +281,7 @@ body {
   font-size: 14px;
 
   &:hover {
-    background-color: rgba(133, 91, 2, 0.68);
+    background-color: rgb(21, 121, 155);
     color: #fff;
   }
 }
@@ -290,14 +292,17 @@ body {
 }
 
 .mapdiv .map path {
-  fill: rgba(133, 92, 2, 0.836);
+  fill: rgb(21, 121, 155);
   transition: all 0.2s ease;
   cursor: pointer;
 }
 
 .mapdiv .map path:hover {
-  fill: rgba(123, 84, 0, 0.68);
+  fill: rgb(50, 159, 196);
   transform: scale(1.01);
+}
+#qoqon{
+  fill: red;
 }
 
 .news {
@@ -308,7 +313,7 @@ body {
   justify-content: center;
   flex-direction: column;
   padding: 30px 0;
-  color: #fff;
+  color: rgb(21, 121, 155);
 }
 
 .new {
@@ -327,7 +332,6 @@ body {
 
 .new h4 {
   text-align: center;
-  color: #855c02d3;
   align-items: center;
   font-size: 21px;
   font-weight: 800;
@@ -355,11 +359,11 @@ body {
   height: fit-content;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 0 25px 0 rgba(133, 91, 2, 0.68);
+  box-shadow: 0 0 25px 0 rgb(21, 121, 155);
   border-radius: 7px;
   overflow: hidden;
   margin: 0px 30px 20px 0px;
-  background-color: rgba(168, 117, 6, 0.68);
+  background-color: rgb(21, 121, 155);
   color: #ffffff;
 }
 
@@ -397,7 +401,7 @@ body {
   padding: 0.8em 2.7em;
   font-weight: 500;
   background: #bebebe;
-  color: rgb(255, 255, 255);
+  color: rgb(243, 243, 243);
   border: none;
   position: relative;
   overflow: hidden;
@@ -413,7 +417,7 @@ body {
   top: 0;
   border-radius: 0.6em;
   margin-top: -0.25em;
-  background: rgba(133, 92, 2, 0.123);
+  background: rgb(21, 121, 155);
 }
 
 .label {
@@ -424,7 +428,7 @@ body {
 .transition {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
   transition-duration: 500ms;
-  background-color: rgb(133, 92, 2);
+  background-color: rgb(0, 54, 71);
   border-radius: 9999px;
   width: 0;
   height: 0;
@@ -450,12 +454,6 @@ body {
 }
 
 .media-section-main {
-  /* background: linear-gradient(
-    0deg,
-    rgba(123, 84, 0, 0.68) 98%,
-    rgba(238, 152, 40, 0.63) 0%,
-    rgba(121, 76, 9, 0) 0%
-  ); */
   padding: 70px 0px;
   z-index: -1;
 }
@@ -464,6 +462,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  color: rgb(21, 121, 155);
 }
 
 .media-section-title {
@@ -476,7 +475,6 @@ body {
 }
 
 .media-section-title h4 {
-  color: rgba(133, 92, 2, 0.836);
   margin-bottom: 10px;
   letter-spacing: 5px;
   font-size: 21px;
@@ -531,7 +529,7 @@ body {
   font-size: 21px;
   letter-spacing: 5px;
   margin-bottom: 5px;
-  color: rgba(121, 76, 9, 0.65);
+  color: rgb(21, 121, 155);
 }
 
 .media-video {
@@ -555,21 +553,16 @@ body {
 .places-section {
   width: 100%;
   z-index: -1;
-  /* background: linear-gradient(
-    0deg,
-    rgba(123, 84, 0, 0.68) 98%,
-    rgba(238, 152, 40, 0) 0%,
-    rgba(121, 76, 9, 0.65) 0%
-  ); */
 }
 
 .places-section-item {
   display: flex;
   flex-direction: column;
+  color: rgb(21, 121, 155);
+
 }
 
 .places-section-item h1 {
-  color: #fff;
   text-align: center;
 }
 
@@ -585,7 +578,6 @@ body {
 .place-card {
   z-index: 1;
   width: 350px;
-  color: rgba(123, 84, 0, 0.68);
   text-align: center;
   padding: 35px;
 }
@@ -603,17 +595,17 @@ body {
   color: #090909;
   padding: 0.9em 1.9em;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 10px;
   border-radius: 0.5em;
   background: #e8e8e8;
   border: 1px solid #e8e8e8;
-  box-shadow: 6px 6px 12px rgba(194, 135, 8, 0.829),
-    -6px -6px 12px rgba(194, 135, 8, 0.829);
+  box-shadow: 6px 6px 12px  rgb(60, 190, 233),
+    -6px -6px 12px rgb(73, 184, 221);
 }
 
 .button2:active {
   color: #666;
-  box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+  box-shadow: inset 2px 2px 10px rgb(47, 160, 197), inset -2px -2px 10px rgb(39, 172, 216);
 }
 
 .button2:before {
@@ -639,7 +631,7 @@ body {
   top: 180%;
   width: 160%;
   height: 190%;
-  background-color: rgba(133, 91, 2, 0.68);
+  background-color: rgb(21, 121, 155);
   border-radius: 50%;
   display: block;
   transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
@@ -648,18 +640,18 @@ body {
 
 .button2:hover {
   color: #ffffff;
-  border: 1px solid rgba(133, 91, 2, 0.68);
+  border: 1px solid rgb(21, 121, 155);
 }
 
 .button2:hover:before {
   top: -35%;
-  background-color: rgba(133, 91, 2, 0.68);
+  background-color: rgb(21, 121, 155);
   transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 
 .button2:hover:after {
   top: -45%;
-  background-color: rgba(133, 91, 2, 0.68);
+  background-color: rgb(21, 121, 155);
   transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 
@@ -683,8 +675,7 @@ body {
   justify-content: center;
   font-size: 21px;
   letter-spacing: 5px;
-
-  color: rgba(121, 76, 9, 0.65);
+  color: rgb(21, 121, 155);
 }
 
 .statistics-title h4 {
@@ -703,7 +694,6 @@ body {
   justify-content: center;
   text-align: center;
   padding: 28px 0px 0px;
-  /* font-family: 'Pacifico'; */
 }
 
 .statistics-item img {
@@ -715,7 +705,7 @@ body {
 .statistics-item-box {
   width: 200px;
   margin: 10px 20px;
-  color: rgba(121, 76, 9, 0.65);
+  color: rgb(21, 121, 155);
 }
 
 .statistics-item-box h5 {
@@ -737,7 +727,7 @@ body {
     0deg,
     rgba(238, 152, 40, 0) 0%,
     rgba(121, 76, 9, 0.03) 0%,
-    rgba(123, 84, 0, 0.68) 98%
+    rgb(78, 190, 221) 98%
   );
 }
 
@@ -748,7 +738,7 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  color: rgba(121, 76, 9, 0.65);
+  color: rgb(21, 121, 155);
   font-weight: 700;
 }
 
@@ -757,6 +747,10 @@ body {
   font-weight: 400;
   letter-spacing: 1px;
   font-family: "Pacifico";
+}
+.why-we-title h4:hover{
+  color: #fff;
+  transition: .3s;
 }
 
 .why-we-items {
@@ -778,16 +772,28 @@ body {
 .why-we-items-item i {
   font-size: 30px;
 }
+.why-we-items-item i:hover{
+  color: #ffffff;
+  transition: .3s;
+}
 
 .why-we-items-item h3 {
   font-size: 15px;
   margin: 30px 0px;
   font-family: "Pacifico";
 }
+.why-we-items-item h3:hover{
+  color: #ffffff;
+  transition: .3s;
+}
 
 .why-we-items-item p {
   font-size: 13px;
   line-height: 30px;
+}
+.why-we-items-item p:hover{
+  color: #ffffff;
+  transition: .3s;
 }
 
 .map-section {
@@ -819,7 +825,7 @@ body {
       0deg,
       rgba(238, 152, 40, 0) 0%,
       rgba(121, 76, 9, 0.03) 0%,
-      rgba(123, 84, 0, 0.68) 98%
+      rgb(35, 98, 119) 98%
     ),
     url(./assets/background/footer-back.jpg);
   background-repeat: no-repeat;
@@ -886,26 +892,6 @@ body {
   }
 }
 
-swiper-container {
-  width: 100%;
-  height: 100%;
-}
-
-swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 
 @media only screen and (max-width: 1240px) {
   .logo {
