--- a/food.css
+++ b/food.css
@@ -23,7 +23,7 @@
 
 .food-nft {
   max-width: 300px;
-  margin: 20px 30px;
+  margin: 20px 40px;
   border: 1px solid   rgb(21, 121, 155);
   background-color: rgb(21, 121, 155);
   background: linear-gradient(0deg,
@@ -51,7 +51,9 @@
   .food-main {
     display: flex;
     flex-direction: column;
-    width: 90%;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
     padding: 1rem;
 
     .food-tokenImage {
@@ -99,8 +101,7 @@
     .food-creator {
       display: flex;
       align-items: center;
-      margin-top: 0.2rem;
-      margin-bottom: -0.3rem;
+      margin: 0px 0px 10px;
 
       ins {
         color: #f8f8f8;
