--- a/place.css
+++ b/place.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alex+Brush&family=Pacifico&display=swap");
 
 .places-section-item {
   width: 100%;
@@ -9,7 +9,7 @@
 
 .places-section-item-title h4 {
   font-size: 30px;
-  font-family: 'Pacifico';
+  font-family: "Pacifico";
   color: rgb(21, 121, 155);
   font-weight: 400;
   line-height: 5px;
@@ -25,13 +25,14 @@
 .places-nft {
   max-width: 300px;
   margin: 20px 30px;
-  border: 1px solid   rgb(21, 121, 155);
+  border: 1px solid rgb(21, 121, 155);
   background-color: rgb(21, 121, 155);
-  background: linear-gradient(0deg,
-      rgb(21, 121, 155) 0%,
-      rgba(17, 0, 32, 0.5) 100%);
-  box-shadow: 0 7px 20px 5px   rgb(21, 121, 155);
-  ;
+  background: linear-gradient(
+    0deg,
+    rgb(21, 121, 155) 0%,
+    rgba(17, 0, 32, 0.5) 100%
+  );
+  box-shadow: 0 7px 20px 5px rgb(21, 121, 155);
   border-radius: 0.7rem;
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
@@ -52,7 +53,9 @@
   .places-main {
     display: flex;
     flex-direction: column;
-    width: 90%;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
     padding: 1rem;
 
     .places-tokenImage {
@@ -100,12 +103,10 @@
     .places-creator {
       display: flex;
       align-items: center;
-      margin-top: 0.2rem;
-      margin-bottom: -0.3rem;
+      margin: 0px 0px 10px 0px;
 
       ins {
         color: #f8f8f8;
-        text-decoration: none;
       }
 
       .places-wrapper {
@@ -145,7 +146,7 @@
     border: 1px solid #ffffff44;
     box-shadow: 0 7px 50px 10px #000000aa;
     transform: scale(1.015);
-    filter: brightness(1.0);
+    filter: brightness(1);
 
     ::before {
       filter: brightness(0.5);
@@ -157,15 +158,15 @@
   .places-tokenImage {
     max-width: 100%;
     height: 250px;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     object-fit: cover;
   }
 
   .places-main h2 {
     font-size: 21px;
-    padding: 15px;
+    padding: 15px 15px 15px 5px;
     color: #fff;
-    text-align: center;
+    text-align: start;
     align-items: center;
   }
 }
