--- a/style.css
+++ b/style.css
@@ -189,7 +189,8 @@ body {
 }
 
 .home,
-.page-home {
+.page-home,
+.place-home {
   position: relative;
   height: 100vh;
   display: flex;
@@ -301,7 +302,7 @@ body {
   fill: rgb(50, 159, 196);
   transform: scale(1.01);
 }
-#qoqon{
+#qoqon {
   fill: red;
 }
 
@@ -555,37 +556,6 @@ body {
   z-index: -1;
 }
 
-.places-section-item {
-  display: flex;
-  flex-direction: column;
-  color: rgb(21, 121, 155);
-
-}
-
-.places-section-item h1 {
-  text-align: center;
-}
-
-.place-cards {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  z-index: 1;
-  justify-content: center;
-  align-items: center;
-}
-
-.place-card {
-  z-index: 1;
-  width: 350px;
-  text-align: center;
-  padding: 35px;
-}
-
-.place-card h3 {
-  padding: 15px;
-}
-
 .button2 {
   display: inline-block;
   transition: all 0.2s ease-in;
@@ -599,13 +569,13 @@ body {
   border-radius: 0.5em;
   background: #e8e8e8;
   border: 1px solid #e8e8e8;
-  box-shadow: 6px 6px 12px  rgb(60, 190, 233),
-    -6px -6px 12px rgb(73, 184, 221);
+  box-shadow: 6px 6px 12px rgb(60, 190, 233), -6px -6px 12px rgb(73, 184, 221);
 }
 
 .button2:active {
   color: #666;
-  box-shadow: inset 2px 2px 10px rgb(47, 160, 197), inset -2px -2px 10px rgb(39, 172, 216);
+  box-shadow: inset 2px 2px 10px rgb(47, 160, 197),
+    inset -2px -2px 10px rgb(39, 172, 216);
 }
 
 .button2:before {
@@ -748,9 +718,9 @@ body {
   letter-spacing: 1px;
   font-family: "Pacifico";
 }
-.why-we-title h4:hover{
+.why-we-title h4:hover {
   color: #fff;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .why-we-items {
@@ -772,9 +742,9 @@ body {
 .why-we-items-item i {
   font-size: 30px;
 }
-.why-we-items-item i:hover{
+.why-we-items-item i:hover {
   color: #ffffff;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .why-we-items-item h3 {
@@ -782,43 +752,20 @@ body {
   margin: 30px 0px;
   font-family: "Pacifico";
 }
-.why-we-items-item h3:hover{
+.why-we-items-item h3:hover {
   color: #ffffff;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .why-we-items-item p {
   font-size: 13px;
   line-height: 30px;
 }
-.why-we-items-item p:hover{
+.why-we-items-item p:hover {
   color: #ffffff;
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.map-section {
-  position: relative;
-  width: 100%;
-  min-height: 80vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 50px 0px;
-  /* background-color: #fff; */
-}
-
-.map-section-title {
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.map-section-title h4 {
-  font-size: 30px;
-  color: #212529d0;
-  font-weight: 500;
-  letter-spacing: 1px;
-}
 
 .footer {
   background: linear-gradient(
@@ -891,7 +838,6 @@ body {
     transform: translateX(0px);
   }
 }
-
 
 @media only screen and (max-width: 1240px) {
   .logo {
