--- a/style.css
+++ b/style.css
@@ -191,7 +191,8 @@ body {
 .home,
 .page-home,
 .place-home,
-.hl-home {
+.hl-home,
+.media-home {
   position: relative;
   height: 100vh;
   display: flex;
@@ -492,7 +493,7 @@ body {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   text-align: center;
   z-index: 1;
 }
@@ -536,8 +537,9 @@ body {
 
 .media-video {
   width: 510px;
-  height: 290px;
+  height: 300px;
   z-index: -1;
+  overflow-x: hidden;
 }
 
 .media-video video {
@@ -551,7 +553,58 @@ body {
   padding: 10px 15px;
   z-index: 1;
 }
+/* hsdahkfjhsdajfhsdhhfuihdiuhguidhiuhdgsuhguihdfuighiuhdug */
+.media-container-button {
+  font-size: 17px;
+  padding: 0.8em 2.7em;
+  font-weight: 500;
+  background: #bebebe;
+  color: rgb(243, 243, 243);
+  border: none;
+  position: relative;
+  overflow: hidden;
+  border-radius: 0.6em;
+  cursor: pointer;
+}
 
+.gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 0.6em;
+  margin-top: -0.25em;
+  background: transparent;
+}
+
+.label {
+  position: relative;
+  top: -1px;
+}
+
+.transition {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  transition-duration: 500ms;
+  background-color: rgb(0, 54, 71);
+  border-radius: 9999px;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.media-container-button:hover .transition {
+  width: 14em;
+  height: 14em;
+}
+
+.media-container-button:active {
+  transform: scale(0.97);
+}
+/* sfffffffgjgfgsyguygfuyayguyfguyguyagfuyguygfuyaguyfguysaguyfguygfsu */
 .places-section {
   width: 100%;
   z-index: -1;
